<resources>
    <string name="app_name">CRUD</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="status">Status</string>
    <string name="sku">SKU</string>
    <string name="save">Save</string>
    <string name="product_detail">Product Detail</string>
    <string name="login">Login</string>
    <string name="product_list">Product List</string>
    <string name="search">Search</string>
    <string name="register">Register</string>

    <string name="blank_sku">SKU is a required field</string>
    <string name="blank_product_name">Product Name is a required field</string>
    <string name="blank_unit">Unit is a required field</string>

    <string name="add_product_success">Add product successfully</string>
    <string name="update_product_success">Update product successfully</string>
    <string name="delete_product_success">Delete product successfully</string>

</resources>