<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="product"
            type="com.relia.crud.data.product.Product" />

        <variable
            name="listener"
            type="com.relia.crud.ui.main.ProductDetailListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.ProductDetailFragment"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:gravity="center"
            tools:ignore="ContentDescription,Autofill">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/productLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="8dp"
                android:background="@drawable/bg_border"
                android:layout_margin="16dp"
                >
                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tvSku, tvProductName, tvPrice, tvQuantity, tvUnit"
                    app:barrierDirection="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sku"
                    android:id="@+id/tvSku"
                    android:textStyle="bold"
                    android:labelFor="@id/etSku"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@id/etSku"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/etSku"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSku"
                    tools:text="sku"
                    android:text="@{product.sku}"
                    android:layout_marginStart="8dp"
                    android:enabled="false"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:inputType="text" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:id="@+id/tvProductName"
                    android:textStyle="bold"
                    android:labelFor="@id/etProductName"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@id/etProductName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/etProductName"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etProductName"
                    tools:text="ProductName"
                    android:text="@{product.product_name}"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/etSku"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:inputType="textPersonName" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:id="@+id/tvQuantity"
                    android:textStyle="bold"
                    android:labelFor="@id/etQuantity"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@id/etQuantity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/etQuantity"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etQuantity"
                    tools:text="10"
                    android:inputType="number"
                    android:text="@{product.qty.toString()}"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/etProductName"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:id="@+id/tvPrice"
                    android:textStyle="bold"
                    android:labelFor="@id/etPrice"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@id/etPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/etPrice"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPrice"
                    tools:text="100000"
                    android:inputType="number"
                    android:text="@{product.price.toString()}"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/etQuantity"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:id="@+id/tvUnit"
                    android:textStyle="bold"
                    android:labelFor="@id/etUnit"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@id/etUnit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/etUnit"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUnit"
                    tools:text="Box"
                    android:text="@{product.unit}"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/etPrice"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:inputType="text" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/tvStatus"
                    android:labelFor="@id/etStatus"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="@id/etStatus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/etStatus"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/etStatus"
                    tools:text="1"
                    android:text="@{product.status.toString()}"
                    android:inputType="number"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/etUnit"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:enabled="false"
                android:onClick="@{() -> listener.onEdit()}"
                android:background="@drawable/bg_btn_10"
                app:layout_constraintTop_toBottomOf="@id/productLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"/>


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_btn_10"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{() -> listener.onDelete()}"
                android:padding="8dp"
                android:src="@drawable/ic_delete"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:tint="@color/white"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintBottom_toBottomOf="@+id/btnSave"
                app:layout_constraintEnd_toStartOf="@+id/btnSave"
                app:layout_constraintTop_toTopOf="@+id/btnSave" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
